@@ -78,7 +78,11 @@ UString StringImp::toString(ExecState *) const
 
 JSObject *StringImp::toObject(ExecState *exec) const
 {
-    return new StringInstance(exec->lexicalInterpreter()->builtinStringPrototype(), val);
+    // Put the reference onto the stack so it is not subject to garbage collection.
+    // <http://bugs.webkit.org/show_bug.cgi?id=12535>
+    UString valCopy = val;
+
+    return new StringInstance(exec->lexicalInterpreter()->builtinStringPrototype(), valCopy);
 }
 
 // ------------------------------ NumberImp ------------------------------------
